--- a/plugin.xml
+++ b/plugin.xml
@@ -19,8 +19,8 @@
 -->
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-           id="cordova-plugin-inappbrowser"
-      version="6.0.1-dev">
+           id="cordova-plugin-inappbrowser-patch"
+      version="6.0.1">
 
     <name>InAppBrowser</name>
     <description>Cordova InAppBrowser Plugin</description>
